@@ -1,4 +1,7 @@
 2007-03-03  Maximilien Cuony
+	* Basic classes and functions for using Gpg added (sample don't work for the moment)
+
+2007-03-03  Maximilien Cuony
 	* FireGPG context menu added
 
 2007-03-03  Achraf cherti
